test/e2e/testdata/deployments/echo-server.yaml
# Copyright 2026 The KubeLB Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# Echo server deployment for e2e tests
# Returns configurable message - useful for verifying correct routing
# Usage: Set $name and $message via Chainsaw bindings
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ($name)
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ($name)
  template:
    metadata:
      labels:
        app: ($name)
    spec:
      containers:
        - name: echo
          image: hashicorp/http-echo:1.0
          args:
            - (join('', ['-text=', $message]))
            - -listen=:8080
          ports:
            - containerPort: 8080
